--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <h1 class="heading">Etch-a-sketch</h1>
         <div id="container">
             <div class="controls">
+                <div class="slidecontainer">
+                    <input type="range" min="16" max="100" value="16" class="slider" id="myRange">
+                    <span id="rangedisplay">16</span>
+                </div>
             </div>
             <div class="sketch-pad">
             </div>
